--- a/views/carritoDeCompras.html
+++ b/views/carritoDeCompras.html
@@ -4,9 +4,52 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="css/carritoDeCompras.css" rel="stylesheet">
+    <link href="css/global.css" rel="stylesheet">
     <title>Carrito de Compras</title>
 </head>
 <body>
-    
+    <header class="tituloPagina"><img width="40" height="40" class="logoCarrito" src="design/logoCarritoDeCompras.png" alt= "Cartera"><h1>Carrito de Compras</h1></header>
+    <section class="productosEnCarrito">
+        <div class="botonTriangulo"><button class="triangulo1"></button></div>
+        <article class="primerProducto">
+            <div><img width="320" height="320" src="design/Cartera.jpg" alt= "Cartera"></div>
+            <div><b><label for="producto1" class="titulosDeProductos">Cartera</label></b></div>
+            <div class="botonAgregarEliminar"><input type= "button" name="producto1" id="producto1" value="+ 1 -" class="botonesAgregado"></div>
+        </article>
+        <article class="segundoProducto">
+            <div><img width="320" height="320" src="design/bolso.jpg" alt= "Bolso"></div>
+            <div><b><label for="producto2" class="titulosdeProductos">Bolso</label></b></div>
+            <div class="botonAgregarEliminar"><input type= "button" name="producto2" id="producto2" value="+ 1 -" class="botonesAgregado"></div>
+        </article>
+        <article class="tercerProducto">
+            <div><img width="320" height="320" src="design/riñoneraa.jpg" alt= "Riñonera"></div>
+            <div><b><label for="producto3" class="titulosDeProductos">Riñonera</label></b></div>
+            <div class="botonAgregarEliminar"><input type= "button" name="producto3" id="producto3" value="+ 1 -" class="botonesAgregado"></div>
+        </article>
+        <div class="botonTriangulo"><button class="triangulo2"></button></div>
+
+    </section>
+
+    <div class="botonesParaPasar">
+        <div><button class="seleccionarVentana"></button></div>
+        <div><button class="seleccionarVentana"></button></div>
+        <div><button class="seleccionarVentana"></button></div>
+    </div>
+
+    <section class="finalizarCompra">
+        <div class="totalEnvio">
+            <div class="totalEnvio2"><h3>Total con envio</h4></div>
+            <div class="totalEnvio3">Lorem ipsum dolor sit arnet</div>
+        </div>
+        <div class="direccEntrega">
+            <div class="direccEntrega2"><h3>Direccion de entrega</h4></div>
+            <div class="direccEntrega3">Lorem ipsum dolor sit arnet</div>
+        </div>
+        <div class="botonComprar">
+            <input type="button" value="COMPRAR" class="botonDeComprar">
+        </div>
+    </section>
+
 </body>
 </html>
