--- a/css/carritoDeCompras.css
+++ b/css/carritoDeCompras.css
@@ -5,7 +5,7 @@
 }
 
 body section.productosEnCarrito {
-    background-color: lightgray;
+    background-color: paleturquoise;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -16,7 +16,7 @@ body section.productosEnCarrito {
 }
 
 .triangulo1  {
-    background-color: lightgray;
+    background-color: paleturquoise;
     border-left: 0px solid transparent;
     border-top: 15px solid transparent;
     border-bottom: 15px solid transparent; 
@@ -25,7 +25,7 @@ body section.productosEnCarrito {
 
 
 .triangulo2  {
-     background-color: lightgray;
+     background-color: paleturquoise;
      border-left: 30px solid;
      border-top: 15px solid transparent;
      border-bottom: 15px solid transparent; 
@@ -73,7 +73,7 @@ body section.productosEnCarrito {
 }
 
 .botonesParaPasar {
-    background-color: lightgray;
+    background-color: paleturquoise;
     display: flex;
     justify-content: center;
     padding: 12px;
