--- a/css/global.css
+++ b/css/global.css
@@ -2,3 +2,6 @@ body {
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     background-color: lightcyan;
 }
+
+
+/*background-color: lightcyan;*/
