Header y footer de Pedro Ilincheta

--- a/views/formularioRegistro.html
+++ b/views/formularioRegistro.html
@@ -9,6 +9,24 @@
     <title>Formulario Registro</title>
 </head>
 <body>
+    <header class="header">
+        <div class="cointainer, logo-nav-container">
+            <div class="barra">
+                <input type="text" id="searchterm" placeholder="¿Que estas buscando?" />
+            </div>
+            <nav class="Faustine">
+                <h3> Faustine </h3>
+            </nav>
+            <nav class="imgs">
+            
+            <img width="50" height="50" src="design/cuadrado.jpg">
+            <img width="50" height="50" src="design/bag.jpg">
+                
+            </nav>
+
+        </div>
+    </header>
+
     <section class="formularioParaRegistro">
         <form action="/formularioRegistro" method="POST">
             <div class="contenedorTodosLosTitulos">
@@ -82,6 +100,31 @@
     <span class="emailCoindiceONo">
         <span class="emailVerde">Los correos electronicos coinciden</span><span>/</span><span class="emailRojo">Los correos electronicos no coinciden</span>
     </span>
+
+    <footer>
+        <div class="footerfaustine">
+            <img width="170" height="150" class="logoff" src="design/logo.jpg">
+            <nav class="lista1">
+                <ul>
+                    <li>Preguntas</li>
+                    <li>Ayuda</li>
+                    <li>La Marca</li>
+                    <li>Cambios y devoluciones</li>
+                </ul>
+            </nav>
+            <nav class="lista2">
+                <ul>
+                    <li>Whatsapp</li>
+                    <li>Instagram</li>
+                    <li>Numero</li>
+                    <li>Mail</li>
+                </ul>
+            </nav>
+
+
+
+        </div>
+    </footer>
     
 </body>
 </html>
