--- a/css/global.css
+++ b/css/global.css
@@ -3,5 +3,53 @@ body {
     background-color: lightcyan;
 }
 
+.header{
+    background: paleturquoise ;
+    left: 0;
+    top:0;
+    width: 100%;
+    z-index: 10;
+    height: 120px;
+    padding: 5px;
+}
+.logo-nav-container{
+    display:flex; 
+    justify-content:space-around;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    font-size: 35pt;
+}
 
-/*background-color: lightcyan;*/
+.Faustine{
+    margin-right: 4%;
+}
+
+.imgs{
+    margin-right: 10px;
+}
+
+.barra{
+    width: 200px;
+    height: 100px;
+}
+
+footer{
+    background-color: paleturquoise;
+    width: 100%;
+    height: 200px;
+    
+}
+
+.footerfaustine{
+    justify-content:space-around;
+    display:flex;
+    align-items: center;
+    width: 100%;
+    font-size: 15pt;
+    height: 100%;
+}
+
+.footerfaustine li{
+    list-style: none;
+}
