--- a/views/formularioRegistro.html
+++ b/views/formularioRegistro.html
@@ -12,20 +12,21 @@
     <header class="header">
         <div class="cointainer, logo-nav-container">
             <div class="barra">
-                <input type="text" id="searchterm" placeholder="¿Que estas buscando?" />
+                <input type="text" id="searchterm" placeholder="¿Que estas buscando?" class="barra1">
             </div>
             <nav class="Faustine">
                 <h3> Faustine </h3>
             </nav>
             <nav class="imgs">
             
-            <img width="50" height="50" src="design/cuadrado.jpg">
-            <img width="50" height="50" src="design/bag.jpg">
+            <button><img width="50" height="50" src="design/cuadrado.jpg"></button>
+            <button><img width="50" height="50" src="design/bag.jpg"></button>
                 
             </nav>
 
         </div>
     </header>
+
 
     <section class="formularioParaRegistro">
         <form action="/formularioRegistro" method="POST">
@@ -106,18 +107,18 @@
             <img width="170" height="150" class="logoff" src="design/logo.jpg">
             <nav class="lista1">
                 <ul>
-                    <li>Preguntas</li>
-                    <li>Ayuda</li>
-                    <li>La Marca</li>
-                    <li>Cambios y devoluciones</li>
+                    <li><a href="·">Preguntas</a></li>
+                    <li><a href="·">Ayuda</a></li>
+                    <li><a href="·">La Marca</a></li>
+                    <li><a href="·">Cambios y devoluciones</a></li>
                 </ul>
             </nav>
             <nav class="lista2">
                 <ul>
-                    <li>Whatsapp</li>
-                    <li>Instagram</li>
-                    <li>Numero</li>
-                    <li>Mail</li>
+                    <li><a href="·">Whatsapp</a></li>
+                    <li><a href="·">Instagram</a></li>
+                    <li><a href="·">Numero</a></li>
+                    <li><a href="·">Mail</a></li>
                 </ul>
             </nav>
 
