carrito de compras con header y footer

--- a/views/carritoDeCompras.html
+++ b/views/carritoDeCompras.html
@@ -9,6 +9,23 @@
     <title>Carrito de Compras</title>
 </head>
 <body>
+    <header class="header">
+        <div class="cointainer, logo-nav-container">
+            <div class="barra">
+                <input type="text" id="searchterm" placeholder="¿Que estas buscando?" class="barra1">
+            </div>
+            <nav class="Faustine">
+                <h3> Faustine </h3>
+            </nav>
+            <nav class="imgs">
+            
+            <button><img width="50" height="50" src="design/cuadrado.jpg"></button>
+            <button><img width="50" height="50" src="design/bag.jpg"></button>
+                
+            </nav>
+
+        </div>
+    </header>
     <header class="tituloPagina"><img width="40" height="40" class="logoCarrito" src="design/logoCarritoDeCompras.png" alt= "Cartera"><h1>Carrito de Compras</h1></header>
     <section class="productosEnCarrito">
         <div class="botonTriangulo"><button class="triangulo1"></button></div>
@@ -50,6 +67,31 @@
             <input type="button" value="COMPRAR" class="botonDeComprar">
         </div>
     </section>
+
+    <footer>
+        <div class="footerfaustine">
+            <img width="170" height="150" class="logoff" src="design/logo.jpg">
+            <nav class="lista1">
+                <ul>
+                    <li><a href="·">Preguntas</a></li>
+                    <li><a href="·">Ayuda</a></li>
+                    <li><a href="·">La Marca</a></li>
+                    <li><a href="·">Cambios y devoluciones</a></li>
+                </ul>
+            </nav>
+            <nav class="lista2">
+                <ul>
+                    <li><a href="·">Whatsapp</a></li>
+                    <li><a href="·">Instagram</a></li>
+                    <li><a href="·">Numero</a></li>
+                    <li><a href="·">Mail</a></li>
+                </ul>
+            </nav>
+
+
+
+        </div>
+    </footer>
 
 </body>
 </html>
