--- a/css/carritoDeCompras.css
+++ b/css/carritoDeCompras.css
@@ -83,6 +83,8 @@ body section.productosEnCarrito {
     display:flex;
     justify-content: space-around;
     margin-top: 50px;
+    position: relative;
+    bottom: 30px;
 }
 
 .totalEnvio {
