--- a/views/carritoDeCompras.html
+++ b/views/carritoDeCompras.html
@@ -73,18 +73,18 @@
             <img width="170" height="150" class="logoff" src="design/logo.jpg">
             <nav class="lista1">
                 <ul>
-                    <li><a href="·">Preguntas</a></li>
-                    <li><a href="·">Ayuda</a></li>
-                    <li><a href="·">La Marca</a></li>
-                    <li><a href="·">Cambios y devoluciones</a></li>
+                    <li class="listasMargenes"><a href="·">Preguntas</a></li>
+                    <li class="listasMargenes"><a href="·">Ayuda</a></li>
+                    <li class="listasMargenes"><a href="·">La Marca</a></li>
+                    <li class="listasMargenes"><a href="·">Cambios y devoluciones</a></li>
                 </ul>
             </nav>
             <nav class="lista2">
                 <ul>
-                    <li><a href="·">Whatsapp</a></li>
-                    <li><a href="·">Instagram</a></li>
-                    <li><a href="·">Numero</a></li>
-                    <li><a href="·">Mail</a></li>
+                    <li class="listasMargenes"><a href="·">Whatsapp</a></li>
+                    <li class="listasMargenes"><a href="·">Instagram</a></li>
+                    <li class="listasMargenes"><a href="·">Numero</a></li>
+                    <li class="listasMargenes"><a href="·">Mail</a></li>
                 </ul>
             </nav>
 
