--- a/views/home.html
+++ b/views/home.html
@@ -7,33 +7,55 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/home.css">
+        <link rel="stylesheet" href="css/global.css">
         <script src="https://kit.fontawesome.com/812a77d5cc.js" crossorigin="anonymous"></script>
         
     </head>
+
     <body>
+
+        <header class="header">
+            <div class="cointainer, logo-nav-container">
+                <div class="barra">
+                    <input type="text" id="searchterm" placeholder="¿Que estas buscando?" class="barra1">
+                </div>
+                <nav class="Faustine">
+                    <h3> Faustine </h3>
+                </nav>
+                <nav class="imgs">
+                
+                <button><img width="50" height="50" src="design/cuadrado.jpg"></button>
+                <button><img width="50" height="50" src="design/bag.jpg"></button>
+                    
+                </nav>
+    
+            </div>
+        </header>
+    <body class="body1">
+
         <header>
             <section class="productos">
                 <div class="derecha">
                     <div class="riñoneras">
-                        <a href="http://www.google.com"><img src= "design/riñoneras.jpg"alt= "carteras cuero"></a>
+                        <a href="http://www.google.com"><img src= "design/riñoneras.jpg"alt= "carteras cuero" class="riñoneras1"></a>
                       
                     </div>
                     <div class="carteras">
-                        <a href="http://www.google.com"><img src="design/cartera.jpg" alt= "carteras cuero"></a>
+                        <a href="http://www.google.com"><img src="design/carteras.jpg" alt= "carteras cuero" class="carteras1"></a>
                         
                     </div>
                 </div>
                 <div class="izquierda">
                     <div class="bandoleras">
-                        <a href="http://www.google.com"><img src="design/bandoleras.jpg" alt= "bandoleras"></a>
+                        <a href="http://www.google.com"><img src="design/bandoleras.jpg" alt= "bandoleras" class="bandoleras1"></a>
                        
                     </div>
                     <div class="mochilas">
-                        <a href="http://www.google.com"><img src="design/mochilas.jpg" alt= "mochilas"></a>
+                        <a href="http://www.google.com"><img src="design/mochilas.jpg" alt= "mochilas" class="mochilas1"></a>
                                          
                     </div>
                     <div class="bolsos">
-                        <a href="http://www.google.com"><img src="design/bolsos.jpg" alt= "bolsos"></a>
+                        <a href="http://www.google.com"><img src="design/bolsos.jpg" alt= "bolsos" class="bolsos1"></a>
                        
                     </div>   
                 </div>                          
@@ -56,8 +78,30 @@
             </section>                        
         </header>
         <footer>
-                       
+            <div class="footerfaustine">
+                <img width="170" height="150" class="logoff" src="design/logo.jpg">
+                <nav class="lista1">
+                    <ul>
+                        <li class="listasMargenes"><a href="·">Preguntas</a></li>
+                        <li class="listasMargenes"><a href="·">Ayuda</a></li>
+                        <li class="listasMargenes"><a href="·">La Marca</a></li>
+                        <li class="listasMargenes"><a href="·">Cambios y devoluciones</a></li>
+                    </ul>
+                </nav>
+                <nav class="lista2">
+                    <ul>
+                        <li class="listasMargenes"><a href="·">Whatsapp</a></li>
+                        <li class="listasMargenes"><a href="·">Instagram</a></li>
+                        <li class="listasMargenes"><a href="·">Numero</a></li>
+                        <li class="listasMargenes"><a href="·">Mail</a></li>
+                    </ul>
+                </nav>
+    
+    
+    
+            </div>
         </footer>
-        
+
+    </body>
     </body>
 </html>
