--- a/views/login.html
+++ b/views/login.html
@@ -6,9 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="css/global.css">
     <title>Faustine</title>
 </head>
+
 <body>
+<body class="body1">
+    <header class="header">
+        <div class="cointainer, logo-nav-container">
+            <div class="barra">
+                <input type="text" id="searchterm" placeholder="¿Que estas buscando?" class="barra1">
+            </div>
+            <nav class="Faustine">
+                <h3> Faustine </h3>
+            </nav>
+            <nav class="imgs">
+            
+            <button><img width="50" height="50" src="design/cuadrado.jpg"></button>
+            <button><img width="50" height="50" src="design/bag.jpg"></button>
+                
+            </nav>
+
+        </div>
+    </header>
     
     <div class="usuario">
         <label for="usuario">Nombre de usuari@</label>
@@ -27,8 +47,33 @@
     <p>
         <a href= "http://www.google.com">Crear cuenta</a>
     </p>
-</body>
-<footer>
 
-</footer>
+    <footer>
+        <div class="footerfaustine">
+            <img width="170" height="150" class="logoff" src="design/logo.jpg">
+            <nav class="lista1">
+                <ul>
+                    <li class="listasMargenes"><a href="·">Preguntas</a></li>
+                    <li class="listasMargenes"><a href="·">Ayuda</a></li>
+                    <li class="listasMargenes"><a href="·">La Marca</a></li>
+                    <li class="listasMargenes"><a href="·">Cambios y devoluciones</a></li>
+                </ul>
+            </nav>
+            <nav class="lista2">
+                <ul>
+                    <li class="listasMargenes"><a href="·">Whatsapp</a></li>
+                    <li class="listasMargenes"><a href="·">Instagram</a></li>
+                    <li class="listasMargenes"><a href="·">Numero</a></li>
+                    <li class="listasMargenes"><a href="·">Mail</a></li>
+                </ul>
+            </nav>
+
+
+
+        </div>
+    </footer>
+
+</body>
+</body>
+
 </html>
