--- a/views/login.html
+++ b/views/login.html
@@ -11,7 +11,6 @@
 </head>
 
 <body>
-<body class="body1">
     <header class="header">
         <div class="cointainer, logo-nav-container">
             <div class="barra">
@@ -29,24 +28,30 @@
 
         </div>
     </header>
-    
-    <div class="usuario">
-        <label for="usuario">Nombre de usuari@</label>
-        <input type="text" name="usuario" id="usuario" minlength="5" data-error="Dato no valido" data-success="Correcto">
-        <label for="password">Contraseña</label>
-        <input type="password" name="password" id="password">
+    <div class="paginaLogin">
+        <div class="etiquetasDeLogin">
+            <span class="usuario">Nombre de usuari@</span>
+            <span class="password">Contraseña</span>
+        </div>
+        <div class="botonesDeLogin">
+            <input type="text" name="usuario" id="usuario" minlength="5" data-error="Dato no valido" data-success="Correcto" class="barraDeUsuario">
+            <input type="password" name="password" id="password" class="barraPassword">
+        </div>
     </div>
     <div class="button">
-    <button type="submit">
-        <a href="/">Enviar</a>
-    </button>
+        <button type="submit" class="boton1">
+            <span class="iniciarSesion">Iniciar Sesion</span>
+        </button>
     </div>
-    <p>
-        <a href= "http://www.google.com">¿Olvidaste tu contraseña?</a>
-    </p>
-    <p>
-        <a href= "http://www.google.com">Crear cuenta</a>
-    </p>
+     
+    <div class="cuentaYContraseña">
+        <p>
+            <a href= "http://www.google.com" class="linkOlvidasteContraseña">¿Olvidaste tu contraseña?</a>
+        </p>
+        <p>
+            <a href= "http://www.google.com" class="linkCrearCuenta">Crear cuenta</a>
+        </p>
+    </div>
 
     <footer>
         <div class="footerfaustine">
@@ -72,8 +77,6 @@
 
         </div>
     </footer>
-
-</body>
 </body>
 
 </html>
