--- a/views/login.html
+++ b/views/login.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/login.css">
     <link rel="stylesheet" href="css/global.css">
-    <title>Faustine</title>
+    <title>Login</title>
 </head>
 
 <body>
